Bug 338089 - src/irc/inputfilter.cpp:1104: bad if test ?
Summary: src/irc/inputfilter.cpp:1104: bad if test ?
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: ircview (other bugs)
Version First Reported In: 1.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: argonel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-07 07:41 UTC by dcb314
Modified: 2014-08-08 20:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dcb314 2014-08-07 07:41:29 UTC
/konversation-1.5/src/irc/inputfilter.cpp:1104:25: warning: logical not is only applied to the left hand side of this comparison [-Wlogical-not-parentheses]

                    if (!getAutomaticRequest("NAMES", parameterList.value(2)) == 1)

Maybe

                    if (getAutomaticRequest("NAMES", parameterList.value(2)) != 1)

was intended.

Possible duplicate at

BUILD/konversation-1.5/src/viewer/viewcontainer.cpp:267:21: warning: logical not is only applied to the left hand side of this comparison [-Wlogical-not-parentheses]

                if (!view->getType() == ChatWindow::Status)
Comment 1 argonel 2014-08-08 20:00:54 UTC
Git commit 2d200537151ea2cb00d9d6e6cb858703abdf1fb7 by eli mackenzie.
Committed on 08/08/2014 at 19:17.
Pushed by argonel into branch '1.5'.

Fix viewtype check during setup

M  +1    -1    src/viewer/viewcontainer.cpp

http://commits.kde.org/konversation/2d200537151ea2cb00d9d6e6cb858703abdf1fb7
Comment 2 argonel 2014-08-08 20:00:55 UTC
Git commit 76c8de488785dbe8487d21ccc17581b5a372a14e by eli mackenzie.
Committed on 08/08/2014 at 18:58.
Pushed by argonel into branch '1.5'.

Fix incorrect getAutomaticRequest usage

getAutomaticRequest returns the current pending count so all callers
have to handle the possibility of there being more than one pending
request. This means that any tests comparing with 1 will malfunction if
there is more than one pending request.

M  +4    -4    src/irc/inputfilter.cpp

http://commits.kde.org/konversation/76c8de488785dbe8487d21ccc17581b5a372a14e