Fix incorrect getAutomaticRequest usage

getAutomaticRequest returns the current pending count so all callers
have to handle the possibility of there being more than one pending
request. This means that any tests comparing with 1 will malfunction if
there is more than one pending request.

BUG:338089